# oficina-erp

./: .env.example  .gitignore  BAZUCA_STATUS.md  COMO_USAR_NOVAS_FEATURES.md  DEBUG_GUIDE.md  FIX_SUMMARY.md  IMPLEMENTATION_NOTES.md  INPUTMODAL_USAGE.md  MIGRATION_QUICKSTART.md  OTIMIZACOES_FIREBASE.md  OVERHAUL_COMPLETE.md  OVERHAUL_FEATURES.md  OVERHAUL_IMPLEMENTATION.md  OVERHAUL_README.md  OVERHAUL_SUMMARY.txt  PERFORMANCE.md  PREMIUM_EDITION_ROADMAP.md  PRINT_FIX.md  QA_TESTING_CHECKLIST.md  README.md  README_BAZUCA.md  SIGNATURE_FIX.md  SYNC_OPTIMIZATION_GUIDE.md  firestore.indexes.json  index.html  package-lock.json  package.json  vite.config.ts  🎉_MEGA_OVERHAUL_COMPLETO.md  🔥_BAZUCA_INICIANDO.txt
docs/: DATABASE_SYNC.md  DATA_SYNC_SYSTEM.md  FIREBASE_MIGRATION.md  FIRESTORE_SETUP.md  GOOGLE_SIGNIN_SETUP.md  INTEGRACAO_LOGIN.md  LOGIN_FIREBASE.md  SPRINT_1_LAZY_LOADING.md
electron/: main.js  preload.js
src/: App.tsx  AppWrapper.tsx  main.rs  main.tsx  styles-checklist.css  styles-crm-timeline.css  styles-dragdrop-overhaul.css  styles-overhaul.css  styles-part-categories.css  styles-parts-print.css  styles-parts.css  styles-scrollbar.css  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: io.rs  lib.rs  styles.css
src/components/: ActionMenu.tsx  CRMDashboard.tsx  ContextMenu.tsx  DataManagementPanel.tsx  DataManager.tsx  DatabaseConfig.tsx  DatabaseResetModal.tsx  DroppableColumn.tsx  FinancialDashboard.tsx  FirstSyncButton.css  FirstSyncButton.tsx  InfiniteScroll.tsx  KanbanBoard.tsx  LazyList.tsx  (+13 more)
(+70 files in other folders)
