[package]
name = "oficina-erp"
version = "0.0.0"
description = "ERP de Oficina"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = ["protocol-asset"] }
tauri-plugin-shell = "2.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lib]
name = "oficina_erp_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
